tests: added test to check jboss serialization and java 17 compatibility (related to #5862, part of #6197) (#11499)